--- a/LadyBird_Foundation/app/src/main/res/values/strings.xml
+++ b/LadyBird_Foundation/app/src/main/res/values/strings.xml
@@ -31,6 +31,7 @@
             <item>Pinetown</item>
             <item>Queensburgh</item>
             <item>Umhlanga</item>
+            <item>Westville</item>
         </string-array>
 
 
